syntax = "proto3";

package etcd_protobufs;

service Etcd {
  rpc Set (EtcdRequest) returns (EtcdResponse) {}
  rpc Get (EtcdRequest) returns (EtcdResponse) {}
  rpc Del (EtcdRequest) returns (EtcdResponse) {}
}

message EtcdRequest {
  int32 request_id = 1;
  string key = 2;
  string value = 3;
}

message EtcdResponse {
  bool ok = 1;
  string key = 2;
  string value = 3;
}